// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input snapshots > matches snapshot — contrast variant 1`] = `
<input
  class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium border-input-border bg-input-contrast-surface text-input-contrast-foreground focus-visible:ring-ring"
  placeholder="placeholder"
/>
`;

exports[`Input snapshots > matches snapshot — default variant 1`] = `
<input
  class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium border-input-border bg-input-surface text-input-foreground focus-visible:ring-ring"
  placeholder="placeholder"
/>
`;

exports[`Input snapshots > matches snapshot — search variant 1`] = `
<input
  class="px-3 py-2 flex w-full border text-base ring-offset-background focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium bg-background-elevated text-text placeholder:text-text-subdued rounded-full h-12"
  placeholder="placeholder"
/>
`;
